# thingiverse-publisher

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml  release-please-config.json  requirements.txt  thingiverse-publisher
.github/workflows/: ci.yml  publish-pypi.yml  release-please.yml
tests/: __init__.py  test_cli.py
thingiverse_publisher/: cli.py
