[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thingiverse-publisher"
version = "0.5.0"
description = "A simple tool to publish things to Thingiverse using the Thingiverse API"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [{ name = "nomike", email = "nomike@nomike.com" }]
keywords = ["thingiverse", "api", "3d", "publish", "maker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "docopt>=0.6.2",
    "json5>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.4.0",
    "pytest>=7.0",
]

[project.scripts]
thingiverse-publisher = "thingiverse_publisher.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["thingiverse_publisher"]

[tool.hatch.build.targets.sdist]
include = ["thingiverse_publisher"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["thingiverse_publisher", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
